# fastapi-base

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
fastapi-application/: .env.template  create_fastapi_app.py  main.py  run.py  run_main.py
fastapi-application/actions/: create_superuser.py
fastapi-application/alembic/versions/: 2025_06_17_1908-7f837a8ab626_create_users_table.py  2025_06_17_1911-e84122b79df6_update_users_table.py  2025_06_18_1322-6be81223884b_create_users_table.py  2025_06_18_1408-c9b1c53ebca5_create_users_table.py  2025_06_18_1410-c7bacfc03961_create_access_token_table.py
fastapi-application/api/: __init__.py
fastapi-application/api/api_v1/: __init__.py  auth.py  fastapi_users.py  messages.py  users.py
fastapi-application/api/dependecies/: backend.py  strategy.py
fastapi-application/api/dependecies/authentication/: __init__.py  access_tokens.py  fastapi_users.py  manager.py  strategy.py  users.py
fastapi-application/api/v1/: __init__.py  auth.py  fastapi_users.py  users.py
fastapi-application/core/: config.py
fastapi-application/core/authentication/: manager.py  transport.py
fastapi-application/core/crud/: users.py
fastapi-application/core/gunicorn/: application.py
fastapi-application/core/models/: access_token.py  base.py  db_helper.py  user.py
fastapi-application/core/models/mixins/: pk.py
fastapi-application/core/schemas/: user.py
